[gd_scene load_steps=2 format=3 uid="uid://6x6yyh0kdbok"]

[ext_resource type="Script" uid="uid://bgbf24nq72ek4" path="res://addons/KiriPythonRPCWrapper/UpdateUI/PythonBuildUpdateUI.gd" id="1_cg85i"]

[node name="PythonBuildUpdateUi" type="Control"]
custom_minimum_size = Vector2(0, 128)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_cg85i")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="PlatformGridContainer" type="GridContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 4

[node name="Label3" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PlatformGridContainer"]
layout_mode = 2
text = "Platform"

[node name="Label4" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PlatformGridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Build"

[node name="Label8" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PlatformGridContainer"]
layout_mode = 2
text = "Download"

[node name="Label9" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/PlatformGridContainer"]
layout_mode = 2
text = "Dependencies"

[node name="Button_UpdateReleaseAssets" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Update Release Assets"

[node name="Label" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Requirements"

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CodeEdit_Requirements" type="CodeEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
size_flags_horizontal = 3
text = "mediapipe==0.10.14
psutil==6.0.0
cv2-enumerate-cameras==1.1.18.2
numpy==1.26.0

"
gutters_draw_line_numbers = true

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="ScrollContainer/MarginContainer/VBoxContainer/Button_UpdateReleaseAssets" to="." method="_on_update_button_pressed"]
[connection signal="text_changed" from="ScrollContainer/MarginContainer/VBoxContainer/HBoxContainer/CodeEdit_Requirements" to="." method="_on_code_edit_requirements_text_changed"]
